add routing to navigate pages

--- a/bynx-shop-model-frontend/src/app/app.component.html
+++ b/bynx-shop-model-frontend/src/app/app.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar bg-dark text-light p-3">
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h1">Bynx.io</span>
-    <span class="nav-link">Shop Model</span>
-    <div class="d-flex">
+    <a class="nav-link" routerLink="products">Shop Model</a>
+    <a class="d-flex" routerLink="cart">
       <div class="bi bi-cart4 text-light position-relative">
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
           0
         </span>
       </div>
-    </div>
+    </a>
   </div>
 </nav>
-<main class="m-2">
+<main>
   <router-outlet></router-outlet>
 </main>
