--- a/bynx-shop-model-frontend/src/app/components/product-view/product-view.component.html
+++ b/bynx-shop-model-frontend/src/app/components/product-view/product-view.component.html
@@ -14,7 +14,7 @@
           </div>
           <div class="d-flex justify-content-start">
             <button class="btn btn-sm btn-primary">Add to cart</button>
-            <button class="btn btn-sm btn-outline-warning mx-2">Go to cart</button>
+            <button class="btn btn-sm btn-outline-warning mx-2" routerLink="/cart">Go to cart</button>
           </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
           </div>
           <div class="d-flex justify-content-start">
             <button class="btn btn-sm btn-primary">Add to cart</button>
-            <button class="btn btn-sm btn-outline-warning mx-2">Go to cart</button>
+            <button class="btn btn-sm btn-outline-warning mx-2" routerLink="/cart">Go to cart</button>
           </div>
       </div>
     </div>
