--- a/bynx-shop-model-frontend/src/app/components/product-view/product-view.component.html
+++ b/bynx-shop-model-frontend/src/app/components/product-view/product-view.component.html
@@ -13,7 +13,7 @@
             <input type="number" class="form-control" style="max-width:50px;" placeholder="1" aria-label="quantity" aria-describedby="quantity">
           </div>
           <div class="d-flex justify-content-start">
-            <button class="btn btn-sm btn-primary">Add to cart</button>
+            <button class="btn btn-sm btn-primary" (click)="addToCart()">Add to cart</button>
             <button class="btn btn-sm btn-outline-warning mx-2" routerLink="/cart">Go to cart</button>
           </div>
       </div>
@@ -42,3 +42,4 @@
     </div>
   </div>
 </section>
+<app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
