Add service to fetch mock data and code clean up

--- a/bynx-shop-model-frontend/src/app/app.component.html
+++ b/bynx-shop-model-frontend/src/app/app.component.html
@@ -5,7 +5,7 @@
     <a class="d-flex" routerLink="cart">
       <div class="bi bi-cart4 text-light position-relative">
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-          0
+          {{productsInCart.length}}
         </span>
       </div>
     </a>
