--- a/bynx-shop-model-frontend/src/app/components/product-view/product-view.component.html
+++ b/bynx-shop-model-frontend/src/app/components/product-view/product-view.component.html
@@ -1,43 +1,90 @@
+<!-- <section class="m-2">
+  <div class="dropdown">
+    <a
+      class="btn btn-secondary dropdown-toggle"
+      role="button"
+      id="dropdownMenuLink"
+      data-bs-toggle="dropdown"
+      aria-expanded="false"
+    >
+      Categories
+    </a>
+
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <li><a class="dropdown-item">Category 1 </a></li>
+      <li><a class="dropdown-item">Category 2</a></li>
+      <li><a class="dropdown-item">Category 3</a></li>
+    </ul>
+  </div>
+</section> -->
+
 <section class="m-4">
-  <h5>Digital Products</h5>
+  <h5 class="text-primary">Digital Products</h5>
   <div class="card-group">
-    <div class="card border-0" *ngFor="let i of [2, 3, 4, 5]">
-      <img src="assets/digital{{ i }}.jpg" alt="{{ i }}" class="card-img-top" />
-      <div class="card-body"></div>
+    <div class="card border-0 mx-4" *ngFor='let product of digitalProducts'>
+      <span class="{{product.imageUrls[0]}} card-img-top"></span>
       <div class="card-footer bg-white border-0">
-        <span>iPhone</span>
-          <p><span>€1000 </span><s> €1100</s></p>
-          <small>Only 1 left in stock</small>
-          <div class="input-group input-group-sm mb-2">
-            <span class="input-group-text" id="quantity">Quantity</span>
-            <input type="number" class="form-control" style="max-width:50px;" placeholder="1" aria-label="quantity" aria-describedby="quantity">
-          </div>
-          <div class="d-flex justify-content-start">
-            <button class="btn btn-sm btn-primary" (click)="addToCart()">Add to cart</button>
-            <button class="btn btn-sm btn-outline-warning mx-2" routerLink="/cart">Go to cart</button>
-          </div>
+        <span>{{product.name}}</span>
+        <p><span>€{{product.prices[0]}} </span><s> €{{product.prices[1]}}</s></p>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault_{{product.articleNumber}}" id="flexRadioDefault1" checked="{{checkBuyOption(product, 'DOWNLOAD_LINK')}}">
+          <label class="form-check-label" for="flexRadioDefault1">
+           Download link
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault_{{product.articleNumber}}" id="flexRadioDefault2" checked="{{checkBuyOption(product,'EMAIL')}}">
+          <label class="form-check-label" for="flexRadioDefault2">
+            Email
+          </label>
+        </div>
+        <div class="d-flex justify-content-start">
+          <button class="btn btn-sm btn-primary" (click)="addDigitalProductToCart(product)">
+            Add to cart
+          </button>
+          <button
+            class="btn btn-sm btn-outline-warning mx-2"
+            routerLink="/cart"
+          >
+            Go to cart
+          </button>
+        </div>
       </div>
     </div>
   </div>
 </section>
 <section class="m-4">
-  <h5>Normal Products</h5>
-  <div class="card-group">
-    <div class="card border-0" *ngFor="let i of [1, 2, 3, 4, 5]">
-      <img src="assets/normal{{ i }}.jpg" alt="{{ i }}" class="card-img-top" />
-      <div class="card-body"></div>
+  <hr>
+  <h5 class="text-primary">Normal Products</h5>
+  <div class="card-group my-4">
+    <div class="card border-0 mx-4" *ngFor="let np of normalProducts.slice(0,4);">
+      <img src="{{np.imageUrls[0]}}" alt="{{ np.name }}" class="card-img-top" />
       <div class="card-footer bg-white border-0">
-        <span>iPhone</span>
-          <p><span>€1000 </span><s> €1100</s></p>
-          <small>Only 1 left in stock</small>
-          <div class="input-group input-group-sm mb-2">
-            <span class="input-group-text" id="quantity">Quantity</span>
-            <input type="number" class="form-control" style="max-width:50px;" placeholder="1" aria-label="quantity" aria-describedby="quantity">
-          </div>
-          <div class="d-flex justify-content-start">
-            <button class="btn btn-sm btn-primary">Add to cart</button>
-            <button class="btn btn-sm btn-outline-warning mx-2" routerLink="/cart">Go to cart</button>
-          </div>
+        <span>{{np.name}}</span>
+        <p><span>€{{np.prices[0]}}</span><s> €{{np.prices[1]}}</s></p>
+        <small>Only {{getStackCount(np)}} left in stock</small>
+        <div class="input-group input-group-sm mb-2">
+          <span class="input-group-text" id="quantity">Quantity</span>
+          <input
+            type="number"
+            class="form-control"
+            style="max-width: 50px"
+            placeholder="1"
+            aria-label="quantity"
+            aria-describedby="quantity"
+            [(ngModel)]="np.quantity"
+          />
+        </div>
+        <div class="d-flex justify-content-start">
+          <button class="btn btn-sm btn-primary" *ngIf="!np.isAddedTocart" (click)="addNormalProductToCart(np)">Add to cart</button>
+          <button class="btn btn-sm btn-danger" *ngIf="np.isAddedTocart">Remove from cart</button>
+          <button
+            class="btn btn-sm btn-outline-warning mx-2"
+            routerLink="/cart"
+          >
+            Go to cart
+          </button>
+        </div>
       </div>
     </div>
   </div>
