--- a/bynx-shop-model-frontend/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/bynx-shop-model-frontend/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,17 +1,18 @@
 <section class="m-4">
   <h5>Shopping Cart</h5>
   <div class="row">
-    <div class="col-6 card">
-      <div class="card-body border-0" *ngFor="let i of [2, 3, 4, 5]">
+    <div class="col-6 card" *ngIf="productsInCart.length">
+      <div class="border-0" *ngFor="let product of productsInCart">
         <div class="row">
           <div class="col-6">
             <div class="card-body" style="display: inline">
               <div class="d-flex col-4">
-                <img
-                  src="assets/digital{{ i }}.jpg"
-                  alt="{{ i }}"
+                <img *ngIf="product.type==='NORMAL'"
+                  src="{{product.imageUrls[0]}}"
+                  alt="{{ product.name }}"
                   class="card-img-top"
                 />
+                <span *ngIf="product.type==='DIGITAL'" class="{{product.imageUrls[0]}} card-img-top"></span>
                 <div class="position-relative">
                   <span
                     class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger pb-2"
@@ -21,9 +22,9 @@
                 </div>
               </div>
               <div class="col-4" style="display: contents">
-                <span>iPhone</span>
-                <span><span>€1000 </span></span>
-                <small>(Only 1 left in stock)</small>
+                <span>{{ product.name }}</span>
+                <span><span>{{ product.name }} </span></span>
+                <small *ngIf="product.type==='NORMAL'">(Only {{getStackCount(product)}} left in stock)</small>
                 <input
                   type="number"
                   class="form-control"
@@ -35,32 +36,38 @@
               </div>
             </div>
           </div>
-          <div class="col-6">Total: €1000</div>
+          <div class="col-6 mt-4">Price: €1000</div>
         </div>
       </div>
     </div>
 
-    <div class="col-6">
+    <h1 *ngIf="!productsInCart.length" class="text-muted">Cart is empty. Please add products from
+      <a routerLink="/products">here</a>.</h1>
+      <div *ngIf="!productsInCart.length" class="bi bi-cart4 text-dark position-relative" style="font-size: 10rem;">
+      </div>
+
+
+    <div class="col-6"  *ngIf="productsInCart.length">
       <div class="card">
         <div class="card-header h4">Billing Address</div>
         <div class="card-body">
           <h5>Total amount: €4000</h5>
           <label for="name" class="col-sm-5 col-form-label">Name</label>
-          <input type="text" class="form-control" id="name" />
+          <input type="text" class="form-control" id="name" placeholder="Lorem ipsum" />
           <label for="houseno" class="col-sm-5 col-form-label"
             >House number</label
           >
-          <input type="text" class="form-control" id="houseno" />
+          <input type="text" class="form-control" id="houseno" placeholder="127"/>
           <label for="street" class="col-sm-5 col-form-label"
             >Street name</label
           >
-          <input type="text" class="form-control" id="street" />
+          <input type="text" class="form-control" id="street" placeholder="straße"/>
           <label for="zip" class="col-sm-5 col-form-label">Zip code</label>
-          <input type="text" class="form-control" id="zip" />
+          <input type="text" class="form-control" id="zip" placeholder="200095"/>
           <label for="place" class="col-sm-5 col-form-label">Place</label>
-          <input type="text" class="form-control" id="place" />
+          <input type="text" class="form-control" id="place" placeholder="Hamburg"/>
         </div>
-        <button class="col-2 m-3 btn btn-primary" routerLink="/products">Buy</button>
+        <button class="col-2 m-3 btn btn-primary" routerLink="/products" [disabled]="!productsInCart.length">Buy</button>
       </div>
     </div>
   </div>
